cmake_minimum_required(VERSION 3.14)
project(linkanalysis_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(test_linkanalysis tests/test_linkanalysis.cpp)
target_include_directories(test_linkanalysis PRIVATE include)
add_executable(test_sixdof tests/test_sixdof.cpp)
target_include_directories(test_sixdof PRIVATE include)
enable_testing()
add_test(NAME linkanalysis COMMAND test_linkanalysis)
add_test(NAME linkanalysis_sixdof COMMAND test_sixdof)
